@@ -4,11 +4,13 @@
 
 v0.6.2 (xx xxx 2010)
 ====================
- * The "Lassen Sie mich in Ruhe!" release
+ * The "lassen Sie mich in Ruhe!" release
  * pidgin-privacy-please is now translatable
+ * Accept all messages that belong to existing conversations
  * Added option to specifically block OSCAR (ICQ/AIM) authorization requests
  * Added option to block people using a regular expression
  * Added option to block messages using a regular expression
+ * Added challenge-response bot-check
 
 v0.6.1 (22 Oct 2009)
 ====================
